# SatisfactoryCalculator

./: .gitignore  .qmake.stash  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN_GUIDE.md  DOWNLOAD_README.md  FINAL_INSTALLER_STATUS.md  LICENSE  Makefile  Makefile.Debug  Makefile.Release  README.md  SatisfactoryCalculatorPro-Setup.bat  build-installer-qtifw.bat  build-installer.bat  build.bat  calculator_engine.cpp  calculator_engine.h  complete_alternates.cpp  complete_alternates.h  create-installer.ps1  game_data.cpp  game_data_ext.cpp  game_data_ext.h  install.bat  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object_script.satiscalculator.Debug  object_script.satiscalculator.Release  recipe_manager.cpp  recipe_manager.h  satiscalculator.pro  ui_mainwindow.h  Пересобрать проект  ╨Ю╤З╨╕╤Б╤В╨╕╤В╤М ╨┐╤А╨╛╨╡╨║╤В
.github/workflows/: ci.yml
Recipes/AlternateRecipes/Alt_Tier9/: Recipe_Alternate_DarkMatter_Trap.uasset  Recipe_Alternate_Diamond_Pink.uasset  Recipe_Alternate_Diamond_Turbo.uasset
Recipes/AlternateRecipes/New_Update3/: Recipe_Alternate_CoatedCable.uasset  Recipe_Alternate_CoatedIronCanister.uasset  Recipe_Alternate_CokeSteelIngot.uasset  Recipe_Alternate_CopperAlloyIngot.uasset  Recipe_Alternate_CopperRotor.uasset  Recipe_Alternate_DilutedPackagedFuel.uasset  Recipe_Alternate_ElectroAluminumScrap.uasset  Recipe_Alternate_FusedWire.uasset  Recipe_Alternate_PlasticSmartPlating.uasset  Recipe_Alternate_PolymerResin.uasset  Recipe_Alternate_PureCateriumIngot.uasset  Recipe_Alternate_PureQuartzCrystal.uasset  Recipe_Alternate_SteelCanister.uasset  Recipe_Alternate_SteelRod.uasset  Recipe_Alternate_WetConcrete.uasset
Recipes/AlternateRecipes/New_Update4/: Recipe_Alternate_AlcladCasing.uasset  Recipe_Alternate_CoolingDevice.uasset  Recipe_Alternate_DilutedFuel.uasset  Recipe_Alternate_ElectricMotor.uasset  Recipe_Alternate_FertileUranium.uasset  Recipe_Alternate_InstantPlutoniumCell.uasset  Recipe_Alternate_InstantScrap.uasset  Recipe_Alternate_OCSupercomputer.uasset  Recipe_Alternate_RadioControlSystem.uasset  Recipe_Alternate_TurboPressureMotor.uasset
Recipes/AlternateRecipes/New_Update9/: Recipe_Alternate_AILimiter_Plastic.uasset  Recipe_Alternate_SteelBeam_Aluminum.uasset  Recipe_Alternate_SteelBeam_Molded.uasset  Recipe_Alternate_SteelCastedPlate.uasset  Recipe_Alternate_SteelPipe_Molded.uasset
Recipes/AlternateRecipes/New_Update9_Ingots/: Recipe_Alternate_CateriumIngot_Tempered.uasset  Recipe_Alternate_Quartz_Fused.uasset  (+2 more)
Recipes/Buildings/: Recipe_AlienPowerBuilding.uasset  Recipe_Blueprint.uasset  Recipe_BlueprintDesigner.uasset  Recipe_BlueprintDesigner_Mk2.uasset  Recipe_CeilingLight.uasset  Recipe_ConstructorMk1.uasset  Recipe_Converter.uasset  Recipe_ConveyorAttachmentMerger.uasset  Recipe_ConveyorAttachmentMergerLift.uasset  Recipe_ConveyorAttachmentSplitter.uasset  Recipe_ConveyorAttachmentSplitterProgrammableLift.uasset  Recipe_ConveyorAttachmentSplitterSmart.uasset  Recipe_ConveyorAttachmentSplitterSmartLift.uasset  Recipe_ConveyorBeltMk1.uasset  Recipe_ConveyorBeltMk2.uasset  Recipe_ConveyorBeltMk5.uasset  Recipe_ConveyorCeilingAttachment.uasset  Recipe_ConveyorLiftMk1.uasset  Recipe_ConveyorLiftMk2.uasset  Recipe_ConveyorLiftMk3.uasset  Recipe_ConveyorLiftMk5.uasset  Recipe_ConveyorPole.uasset  Recipe_ConveyorPoleWall.uasset  Recipe_DroneTransport.uasset  Recipe_FloodlightPole.uasset  Recipe_FloodlightWall.uasset  Recipe_GeneratorCoal.uasset  Recipe_GeneratorIntegratedBiomass.uasset  Recipe_HadronCollider.uasset  Recipe_HyperPoleStackable.uasset  Recipe_HyperTubeTJunction.uasset  Recipe_JumpPadAdjustable.uasset  Recipe_LookoutTower.uasset  Recipe_ManufacturerMk1.uasset  Recipe_MinerMk1.uasset  Recipe_MinerMk2.uasset  Recipe_MinerMk3.uasset  Recipe_OilRefinery.uasset  Recipe_Packager.uasset  Recipe_PipeHyperSupport.uasset  (+13 more)
Recipes/Equipment/: Recipe_BladeRunners.uasset  Recipe_Chainsaw.uasset  Recipe_FilterGasMask.uasset  Recipe_FilterHazmat.uasset  Recipe_Gasmask.uasset  Recipe_GunpowderMK2.uasset  Recipe_JetPack.uasset  Recipe_Nobelisk.uasset  Recipe_NobeliskDetonator.uasset
Recipes/HadronCollider/: Recipe_DarkMatter.uasset  Recipe_Plutonium.uasset  Recipe_SingularityCell.uasset
Recipes/Holiday/: Recipe_TreeGiftProducer.uasset
Recipes/Manufacturer/: Recipe_ModularFrameHeavy.uasset  Recipe_PlutoniumFuelRod.uasset  Recipe_RadioControlUnit.uasset
Recipes/OilRefinery/: Recipe_AluminaSolution.uasset  Recipe_AluminumScrap.uasset  Recipe_IonizedFuel.uasset  Recipe_Plastic.uasset  Recipe_ResidualFuel.uasset  Recipe_ResidualRubber.uasset  Recipe_UnpackageBioFuel.uasset  Recipe_UnpackageFuel.uasset  Recipe_UnpackageOil.uasset  Recipe_UnpackageOilResidue.uasset
Recipes/Packager/: Recipe_PackagedIonizedFuel.uasset  Recipe_PackagedNitrogen.uasset  Recipe_UnpackageNitrogen.uasset  Recipe_UnpackageSulfuricAcid.uasset
Recipes/QuantumEncoder/: Recipe_TemporalProcessor.uasset
Recipes/Research/: BP_ResearchManager.uasset
Recipes/Smelter/: Recipe_IngotCaterium.uasset  Recipe_IngotCopper.uasset  Recipe_IngotIron.uasset  Recipe_IngotSAM.uasset  Recipe_IngotSteel.uasset
Recipes/SpaceElevatorParts/: Recipe_SpaceElevatorPart_1.uasset  Recipe_SpaceElevatorPart_12.uasset  Recipe_SpaceElevatorPart_3.uasset  Recipe_SpaceElevatorPart_7.uasset  Recipe_SpaceElevatorPart_8.uasset  Recipe_SpaceElevatorPart_9.uasset
Recipes/Vehicle/: Recipe_Explorer.uasset  Recipe_FactoryCart.uasset  Recipe_Tractor.uasset  Recipe_Truck.uasset
docs/: API_REFERENCE.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md
include/: calculator_engine.h  complete_alternates.h  game_data.h  game_data_ext.h  mainwindow.h  recipe_manager.h
installer/config/: config.xml  controlscript.qs
release/: moc_calculator_engine.cpp  moc_mainwindow.cpp  moc_predefs.h  moc_recipe_manager.cpp
scripts/: build.bat
src/: complete_alternates.cpp  game_data.cpp  game_data_ext.cpp  main.cpp  mainwindow.cpp  recipe_manager.cpp
tools/: build-cmake.bat  build.bat  build1.bat  build_release.bat  ╨Я╨╡╤А╨╡╤Б╨╛╨▒╤А╨░╤В╤М ╨┐╤А╨╛╨╡╨║╤В
tools/scripts/: build.sh  ╨Ю╤З╨╕╤Б╤В╨╕╤В╤М ╨┐╤А╨╛╨╡╨║╤В
(+460 files in other folders)
